# trinitytech-deploy

./: LICENSE  README.md  pyproject.toml
trinitytech_deploy/: __init__.py  assets.py  docker.py  maven.py  node.py  os.py  utils.py
trinitytech_deploy/assets/docker-compose/: spring-boot-xxl-job.docker-compose.tmpl  spring-boot.docker-compose.tmpl  web.docker-compose.tmpl
trinitytech_deploy/assets/dockerfile/: maven-java-xxl-job.Dockerfile  maven-java.Dockerfile  web-dist.Dockerfile
